--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
 			<artifactId>jackson-dataformat-xml</artifactId>
 			<version>2.13.0</version>
 		</dependency>
+		
+		 <dependency>
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi-ooxml</artifactId>
+        <version>5.0.0</version>
+    </dependency>
 
 	</dependencies>
 </project>
